--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,3 +1,10 @@
-<p>
-recipes works!
-</p>
+div.row div.col-md-7
+<div class="row">
+	<div class="col-md-5">
+    <app-recipeslist></app-recipeslist>
+	</div>
+	<div class="col-md-7">
+    <app-recipesdetails>
+    </app-recipesdetails>
+	</div>
+</div>
