--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,9 @@
-<h1>
-The header
-</h1>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a href="#" class="navbar-brand">recipe book </a>
+		</div>
+		<div class="collaps navbar-collapse">
+		</div>
+	</div>
+</nav>
