--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,22 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
-		<div class="collaps navbar-collapse">
+		<div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="#">recipes</a></li>
+        <li><a href="#">shopping list</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <ul class ="dropdown-menu">
+            <li><a href="#">save data</a></li>
+            <li><a href="#">fetch data</a></li>
+          </ul>
+        </li>
+      </ul>
+         
 		</div>
 	</div>
 </nav>
