--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
 	<div class="container-fluid">
-		<div class="navbar-header">
+		<div class="navbar-brand">
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
 		<div class="collapse navbar-collapse">
@@ -8,6 +8,7 @@
         <li><a href="#">recipes</a></li>
         <li><a href="#">shopping list</a></li>
       </ul>
+		</div>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <ul class ="dropdown-menu">
@@ -16,7 +17,6 @@
           </ul>
         </li>
       </ul>
-         
 		</div>
 	</div>
 </nav>
