--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
 	<div class="container-fluid">
-		<div class="navbar-brand">
+		<div class="navbar-header">
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
-	
-      <ul class="nav navbar-nav">
-        <li><a href="#">recipes</a></li>
-        <li><a href="#">shopping list</a></li>
+
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link"href="#">recipes</a></li>
+     
+        <li class="nav-item"><a class="nav-link" href="#">shopping list</a></li>
       </ul>
 		
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" role ="button">manage</a>
           <ul class ="dropdown-menu">
             <li><a href="#">save data</a></li>
             <li><a href="#">fetch data</a></li>
           </ul>
         </li>
       </ul>
-		
+	
 	</div>
 </nav>
