--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
+<nav class="navbar navbar-expand-sm bg-success navbar-light">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a href="#" class="navbar-brand">recipe book </a>
@@ -12,7 +12,7 @@
 		
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role ="button">manage</a>
+          <a href="#" class="dropdown-toggle" class="nav-link" role ="button">manage</a>
           <ul class ="dropdown-menu">
             <li><a href="#">save data</a></li>
             <li><a href="#">fetch data</a></li>
