--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -1,1 +1,14 @@
-  <app-recipesitem></app-recipesitem>
+  <div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-dark">new recipie</button>
+  </div>
+  <div class="col-xs-12">
+    <a href="#" class="list-group-item clearfix">
+      
+    </a>
+      
+   <app-recipesitem></app-recipesitem>
+  </div>
+  </div>
+ 
+  
