--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -1,14 +1,19 @@
-  <div class="row">
-  <div class="col-xs-12">
-    <button class="btn btn-dark">new recipie</button>
+<div class="row">
+	<div class="col-xs-12">
+		<button class="btn btn-dark">new recipie</button>
   </div>
+ </div>
+ <div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix">
-      
-    </a>
-      
+  <a href="#" class="list-group-item clearfix">
+    <div class ="pull-left">
+      <h2 class= "list-group-item-heading"> {{  }}</h2>
+      <p class= "list-group-item-heading">dis</p>
+    </div>
+    <span class="pull-right">
+      <img src="" alt="" class="img-responsive" style="max-height: 50px" >
+    </span>
+   </a>
    <app-recipesitem></app-recipesitem>
   </div>
   </div>
- 
-  
