--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -3,15 +3,16 @@
 		<button class="btn btn-dark">new recipie</button>
   </div>
  </div>
+ <hr>
  <div class="row">
   <div class="col-xs-12">
-  <a href="#" class="list-group-item clearfix">
+  <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes ">
     <div class ="pull-left">
-      <h2 class= "list-group-item-heading"> {{  }}</h2>
-      <p class= "list-group-item-heading">dis</p>
+      <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
+      <p class= "list-group-item-heading">{{ recipe.discription }}</p>
     </div>
     <span class="pull-right">
-      <img src="" alt="" class="img-responsive" style="max-height: 50px" >
+      <img src="{{ recipe.imagepath }}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px" >
     </span>
    </a>
    <app-recipesitem></app-recipesitem>
