--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -6,7 +6,7 @@
  <hr>
  <div class="row">
   <div class="col-xs-12">
-  <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes ">
+  <a href="#" class="list-group-item active bg-dark clearfix" *ngFor="let recipe of recipes ">
     <div class ="pull-left">
       <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
       <p class= "list-group-item-heading">{{ recipe.discription }}</p>
