--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -1,19 +1,19 @@
 <div class="row">
-	<div class="col-xs-12">
+	<div class="col-xs-12 pull-right">
 		<button class="btn btn-dark">new recipie</button>
   </div>
  </div>
  <hr>
  <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 pull-right">
   <a href="#" class="list-group-item active bg-dark clearfix" *ngFor="let recipe of recipes ">
     <div class ="pull-left">
       <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
       <p class= "list-group-item-heading">{{ recipe.discription }}</p>
     </div>
-    <span class="pull-right">
+    <div class="pull-top">
       <img src="{{ recipe.imagepath }}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px" >
-    </span>
+    </div>
    </a>
    <app-recipesitem></app-recipesitem>
   </div>
