--- a/src/app/recipes/recipesdetails/recipesdetails.component.html
+++ b/src/app/recipes/recipesdetails/recipesdetails.component.html
@@ -1,1 +1,23 @@
-recipesdeails
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>recipe name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdowm-toggle"> manage recipe <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#"> shopping list</a></li>
+         <li><a href="#"> edir recipe</a></li>
+          <li><a href="#"> delete recipe</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
