--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -11,7 +11,7 @@
       <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
       <p class= "list-group-item-heading">{{ recipe.discription }}</p>
     </div>
-    <div class="pull-top">
+    <div class="pull-right">
       <img src="{{ recipe.imagepath }}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px" >
     </div>
    </a>
