--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,11 +4,11 @@
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
 
-      <ul class="navbar-nav">
+      <div class="navbar-nav">
         <li class="nav-item"><a class="nav-link"href="#">recipes</a></li>
      
         <li class="nav-item"><a class="nav-link" href="#">shopping list</a></li>
-      </ul>
+      </div>
 		
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
