--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-success navbar-light">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="navbar-header">
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
 
-      <div class="navbar-nav">
-        <li class="nav-item"><a class="nav-link"href="#">recipes</a></li>
+      <div class="nav navbar-nav">
+        <li><a class="nav-link"href="#">recipes</a></li>
      
-        <li class="nav-item"><a class="nav-link" href="#">shopping list</a></li>
+        <li><a class="nav-link" href="#">shopping list</a></li>
       </div>
 		
       <ul class="nav navbar-nav navbar-right">
