--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,14 @@
-<nav class="navbar navbar-expand-sm bg-success navbar-light">
+<nav class="navbar navbar-default bg-success navbar-light">
 	<div class="container">
 		<div class="navbar-header">
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
 
-      <div class="nav navbar-nav">
+      <ul class="nav navbar-nav">
         <li><a class="nav-link"href="#">recipes</a></li>
-     
-        <li><a class="nav-link" href="#">shopping list</a></li>
-      </div>
-		
-      <ul class="nav navbar-nav navbar-right">
+        <li><a class="nav-link" href="#">shopping list</a></li>          
+      </ul>
+		    <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" class="nav-link" role ="button">manage</a>
           <ul class ="dropdown-menu">
@@ -19,6 +17,5 @@
           </ul>
         </li>
       </ul>
-	
-	</div>
+		</div>
 </nav>
