--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 			<a href="#" class="navbar-brand">recipe book </a>
 		</div>
 
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><a class="nav-link"href="#">recipes</a></li>
         <li><a class="nav-link" href="#">shopping list</a></li>          
       </ul>
