--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
 		</div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="nav-link"href="#">recipes</a></li>
-        <li><a class="nav-link" href="#">shopping list</a></li>          
+        <li><a class="nav-link"href="#"(click)="onclick('recipe')">recipes</a></li>
+        <li><a class="nav-link" href="#"(click)="onclick('shopping')">shopping list</a></li>          
       </ul>
 		    <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
