--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-header></app-header>
+<app-head (display1) = "ontopbarclick($event)"></app-head>
 <div class="container">
 	<div class="Row">
 		<div class=".col-md-12">
-			<app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+			<app-recipes *ngIf = "show ==='recipe'"></app-recipes>
+      <app-shopping-list
+      *ngIf="show ==='shopping'"></app-shopping-list>
 		</div>
-	</div>
+	</div>   
 </div>
