--- a/src/app/recipes/recipeslist/recipesitem/recipesitem.component.html
+++ b/src/app/recipes/recipeslist/recipesitem/recipesitem.component.html
@@ -1,1 +1,9 @@
-recipesitem
+<a href="#" class="list-group-item active bg-dark clearfix" >
+    <div class ="pull-left">
+      <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
+      <p class= "list-group-item-heading">{{ recipe.discription }}</p>
+    </div>
+    <div class="pull-right">
+      <img src="{{ recipe.imagepath }}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px" >
+    </div>
+   </a>
