--- a/src/app/recipes/recipeslist/recipeslist.component.html
+++ b/src/app/recipes/recipeslist/recipeslist.component.html
@@ -6,15 +6,8 @@
  <hr>
  <div class="row">
   <div class="col-xs-12 pull-right">
-  <a href="#" class="list-group-item active bg-dark clearfix" *ngFor="let recipe of recipes ">
-    <div class ="pull-left">
-      <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
-      <p class= "list-group-item-heading">{{ recipe.discription }}</p>
-    </div>
-    <div class="pull-right">
-      <img src="{{ recipe.imagepath }}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px" >
-    </div>
-   </a>
-   <app-recipesitem></app-recipesitem>
+  <app-recipesitem *ngFor="let recipeel of recipes "
+  [recipe]="recipeel">
+  </app-recipesitem>
   </div>
-  </div>
+  </div> 
