--- a/src/app/recipes/recipeslist/recipesitem/recipesitem.component.html
+++ b/src/app/recipes/recipeslist/recipesitem/recipesitem.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item active bg-dark clearfix" >
+<a href="#" class="list-group-item active bg-dark clearfix" (click)="onselected()">
     <div class ="pull-left">
       <h2 class= "list-group-item-heading"> {{ recipe.name }}</h2>
       <p class= "list-group-item-heading">{{ recipe.discription }}</p>
